<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Say It</string>
    <string name="play">Play</string>
    <string name="type_something">Type something</string>
    <string name="share">Share</string>
    <string name="permission_message">We need you to allow the permission so that we could share the text as an audio file</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="share_unavailable">Allow permissions to share it</string>
    <string name="slogan">¡Convert your text to audio and share it!</string>
    <string name="about">About</string>
    <string name="pitch">Pitch</string>
    <string name="speed">Speed</string>
    <string name="init_failed">Initialization failed</string>
</resources>