<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/medium"
    android:background="@color/background"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_message"
        android:textAlignment="center"
        android:textColor="@color/onBackgroundTextColor"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/allowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small"
        android:layout_gravity="center"
        android:text="@string/allow"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/denyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/deny"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

</LinearLayout>